tests/reference/run-array_shape_01_cc-098a6d5.stderr
semantic error: Different shape for array assignment on dimension 1(3 and 2)
 --> tests/errors/array_shape_01_cc.f90:3:1
  |
3 | x = reshape([1,2,3,4],[2,2])
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 

semantic error: Different shape for array assignment on dimension 1(3 and 1)
 --> tests/errors/array_shape_01_cc.f90:4:1
  |
4 | x = reshape([1,2,3,4],[1,2])
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
